add documentation for onLoad

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,9 @@
         <!-- translation JS -->
         <script src="./lng/index.js"></script>
         <script type="text/javascript">
+        /**
+         * Function which loads several other functions on page load
+         */
         function onLoad() {
             /**
              * Function which shows message on the snackbar
