add first version of english translation

--- a/www/settings.html
+++ b/www/settings.html
@@ -37,6 +37,8 @@
         <script src="./js/user.js"></script>
         <!-- german translation -->
         <script src="./lng/de.js"></script>
+        <!-- english translation -->
+        <script src="./lng/en.js"></script>
         <!-- translation JS -->
         <script src="./lng/index.js"></script>
         <script>
