--- a/www/settings.html
+++ b/www/settings.html
@@ -9,6 +9,8 @@
         <script src="./js/jquery-3.2.0.min.js"></script>
         <!-- Cordova -->
         <script src="cordova.js"></script>
+        <!-- Promise polyfill -->
+        <script src="./js/promise.js"></script>
         <!-- Material CSS -->
         <link rel="stylesheet" href="./css/material.min.css">
         <!-- EVNotify CSS -->
